[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://menus/Splash.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/JimHall-Wanderlust.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "black_fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions/BlackFade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transitions/BlackFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "black_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions/BlackFade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transitions/BlackFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/black_fade_in = SubResource( 1 )
anims/black_fade_out = SubResource( 2 )

[node name="Room" type="Node" parent="."]

[node name="Splash" parent="Room" instance=ExtResource( 2 )]

[node name="Transitions" type="CanvasLayer" parent="."]
layer = 128

[node name="BlackFade" type="ColorRect" parent="Transitions"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicManager" type="Node" parent="."]

[node name="AudioStream1" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true

[node name="AudioStream2" type="AudioStreamPlayer" parent="MusicManager"]

[node name="Tween" type="Tween" parent="MusicManager"]
[connection signal="tween_all_completed" from="MusicManager/Tween" to="." method="_on_Tween_tween_all_completed"]
